--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
